--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,13 @@
-/* To learn more about Typescript configuration file: https://www.typescriptlang.org/docs/handbook/tsconfig-json.html. */
-/* To learn more about Angular compiler options: https://angular.dev/reference/configs/angular-compiler-options. */
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "outDir": "./out-tsc/app",
-    "types": [
-      "node"
-    ]
+  //   "module": "CommonJS",
+  //   "target": "ES6"
+   },
+  "exclude": ["node_modules", "**/node_modules/*"],
+  "angularCompilerOptions": {
+    "strictTemplates": true,
+    "enableIvy": true
   },
   "files": [
     "src/main.ts",
@@ -14,6 +15,6 @@
     "src/server.ts"
   ],
   "include": [
-    "src/**/*.d.ts"
+    "src/**/*.ts"
   ]
 }
